# bug-tracker

./: README.md  db.sqlite3  pyproject.toml
bug_tracker/: settings.py  urls.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py
templates/: generic_form.html  index.html  ticket.html  user.html
